--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -15,5 +15,6 @@ modules:
 #            capabilities:
 #               "goog:chromeOptions":
         - \Helper\Acceptance
+        - \Helper\LoginIntoAdminPanelHelper
         - Asserts
     step_decorators: ~        
