LC-9: add .env file; move admin and user credential to env; add autoload for env variables;

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
+# Admin creds
 ADMIN_LOGIN = 'admin'
 ADMIN_PASSWORD = 'admin'
+
+# User creds
+USER_EMAIL = 'miroliubov.a@yandex.ru'
+USER_PASSWORD = '09764227'
