LC-9: review fixes #1;

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ ADMIN_LOGIN = 'admin'
 ADMIN_PASSWORD = 'admin'
 
 # User creds
-USER_EMAIL = 'miroliubov.a@yandex.ru'
-USER_PASSWORD = '09764227'
+USER_EMAIL = 'test@test.ru'
+USER_PASSWORD = '12345''
