--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -16,11 +16,9 @@ modules:
 #               "goog:chromeOptions":
         - \Helper\Acceptance
         - Asserts
-        - \Helper\Dbhelper
+        - \Helper\DbHelper
         - Db:
-            dsn: 'mysql:host=127.0.0.1;port=3306;dbname=litecart2;charset=utf8'
-            user: 'root'
+            dsn: "mysql:host=%DB_HOST%;port=%DB_PORT%;dbname=%DB_NAME%;charset=utf8"
+            user: "%DB_USER%"
             password: ''
-    params:
-      - .env
     step_decorators: ~        
