small fixes and refactoring #2

--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -11,6 +11,7 @@ modules:
             url: 'http://localhost/LiteCart'
             browser: chrome
             restart: true
+            clear_cookies: true
             window_size: 'maximize'
 #            capabilities:
 #               "goog:chromeOptions":
