--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,17 @@
 # Admin creds
-ADMIN_LOGIN = 'admin'
-ADMIN_PASSWORD = 'admin'
+ADMIN_LOGIN='admin'
+ADMIN_PASSWORD='admin'
 
 # User creds
-USER_EMAIL = 'test@test.ru'
-USER_PASSWORD = '12345''
+USER_EMAIL='test@test.ru'
+USER_PASSWORD='12345'
+
+# Db
+DB_HOST='127.0.0.1'
+DB_PORT='3306'
+DB_NAME='litecart2'
+DB_USER='root'
+DB_PASSWORD=''
+
+# Captcha
+CAPTCHA_ENABLED=false
